tests/rosetta/out/Dart/cheryls-birthday.error
run error: exit status 254
../../tests/rosetta/out/Dart/cheryls-birthday.dart:12:22: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
      c = (c as num) + 1;
                     ^
../../tests/rosetta/out/Dart/cheryls-birthday.dart:22:22: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
      c = (c as num) + 1;
                     ^
../../tests/rosetta/out/Dart/cheryls-birthday.dart:102:11: Error: Method not found: 'jsonEncode'.
    print(jsonEncode(v));
          ^^^^^^^^^^
../../tests/rosetta/out/Dart/cheryls-birthday.dart:131:5: Error: Undefined name 'stdout'.
    stdout.write('   test $name ...');
    ^^^^^^
../../tests/rosetta/out/Dart/cheryls-birthday.dart:136:9: Error: Undefined name 'stdout'.
        stdout.writeln(' ok (${_formatDuration(d)})');
        ^^^^^^
../../tests/rosetta/out/Dart/cheryls-birthday.dart:140:9: Error: Undefined name 'stdout'.
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        ^^^^^^
